# LightMirrors

./: .env.example  .gitignore  README.en.md  README.md  ROADMAP.md  docker-compose-caddy.yml  docker-compose.yml
.github/workflows/: ci.yaml
aria2/: Dockerfile  aria2.conf  entrypoint.sh
caddy/: Caddyfile  Dockerfile
mirrors/: Dockerfile  aria2_api.py  config.py  pyproject.toml  server.py
mirrors/proxy/: cached.py  direct.py  file_cache.py
mirrors/sites/: docker.py  npm.py  pypi.py  torch.py
src/: Dockerfile  Makefile  pyproject.toml  requirements.txt  setup.cfg
src/certs/: certificate.pem  csr.pem  generate.sh  private.key  san.cnf
src/mirrorsrun/: aria2_api.py  config.py  docker_utils.py  server.py
src/mirrorsrun/proxy/: direct.py  file_cache.py
src/mirrorsrun/sites/: common.py  docker.py  goproxy.py  k8s.py  npm.py  pypi.py  torch.py
test/: Dockerfile  docker-compose.yml  mirrors_test.py  runner.py  utils.py
test/scripts/: docker.sh  golang.sh  python.sh
test/scripts/certs/: certificate.crt
