[tool.poetry]
name = "light-mirrors"
version = "0.1.0"
description = ""
authors = ["'Anonymous' <'<>'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
httpx = "^0.26.0"
tenacity = "^8.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
